--- a/TorrLogger/MainWindow.xaml
+++ b/TorrLogger/MainWindow.xaml
@@ -6,6 +6,13 @@
         xmlns:local="clr-namespace:TorrLogger"
         mc:Ignorable="d"
         Title="Torrent Logger" Height="350" Width="525">
+    <Window.Icon>
+        <DrawingImage>
+            <DrawingImage.Drawing>
+                <ImageDrawing ImageSource="Images/AppIcon.ico" Rect="0 0 42 42" />
+            </DrawingImage.Drawing>
+        </DrawingImage>
+    </Window.Icon>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -14,9 +21,9 @@
         <DockPanel Grid.Row="0">
             <Menu DockPanel.Dock="Top">
                 <MenuItem x:Name="mnuFile" Header="_File">
-                    <MenuItem x:Name="mnuOpen" Header="_Open"/>
+                    <MenuItem x:Name="mnuOpen" Header="_Open" Click="mnuOpen_Click"/>
                     <MenuItem x:Name="mnuClose" Header="_Close"/>
-                    <MenuItem x:Name="mnuSave" Header="_Save"/>
+                    <MenuItem x:Name="mnuSave" Header="_Exit"/>
                 </MenuItem>
             </Menu>
             <StackPanel></StackPanel>
