--- a/TorrLogger/ImportWindow.xaml
+++ b/TorrLogger/ImportWindow.xaml
@@ -20,7 +20,7 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Select a torrent file" Margin="10,10,5,5" />
-            <TextBox Grid.Column="1" Margin="5, 10, 5, 5" />
+            <TextBox Grid.Column="1" x:Name="txtFileName" Margin="5, 10, 5, 5" Padding="0, 5, 0, 0" />
             <Button Grid.Column="2" x:Name="btnBrowse" Content="Browse..." Padding="5, 0, 5, 0" Margin="5, 10, 10, 5" Click="btnBrowse_Click" />
         </Grid>
         <Grid Grid.Row="1">
@@ -29,7 +29,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Title/Name" Margin="10,5,5,5" />
-            <TextBox Grid.Column="1" Margin="5, 5, 10, 5" />
+            <TextBox Grid.Column="1" Margin="5, 5, 10, 5" Padding="0, 5, 0, 0" />
         </Grid>
         <Label Grid.Row="2" Content="This is the Title in the Excel List and given by me." Margin="0, 0, 10, 0" HorizontalAlignment="Right" />
         <Button Grid.Row="3" x:Name="btnImport" Content="Import" Padding="7, 5, 7, 7" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0, 0, 10, 10" Click="btnImport_Click"/>
