--- a/TorrLogger/ImportWindow.xaml
+++ b/TorrLogger/ImportWindow.xaml
@@ -29,7 +29,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Title/Name" Margin="10,5,5,5" />
-            <TextBox Grid.Column="1" Margin="5, 5, 10, 5" Padding="0, 5, 0, 0" />
+            <TextBox Grid.Column="1" x:Name="txtName" Margin="5, 5, 10, 5" Padding="0, 5, 0, 0" />
         </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
