--- a/TorrLogger/MainWindow.xaml
+++ b/TorrLogger/MainWindow.xaml
@@ -64,7 +64,7 @@
                             <DataGridTextColumn Binding="{Binding No}" Header="No" Width="40" />
                             <DataGridTextColumn Binding="{Binding IpAddress}" Header="IP Address" Width="100" />
                             <DataGridTextColumn Binding="{Binding Port}" Header="Port" Width="50" />
-                            <DataGridTextColumn Binding="{Binding Client}" Header="Client" Width="100" />
+                            <!--<DataGridTextColumn Binding="{Binding Client}" Header="Client" Width="100" />-->
                             <DataGridTextColumn Binding="{Binding DateTime}" Header="Date&amp;Time" Width="150" />
                             <DataGridTextColumn Binding="{Binding Title}" Header="Title" Width="100" />
                             <DataGridTextColumn Binding="{Binding FileHash}" Header="File Hash" Width="200" />
@@ -85,7 +85,7 @@
                             <DataGridTextColumn Binding="{Binding No}" Header="No" Width="40" />
                             <DataGridTextColumn Binding="{Binding IpAddress}" Header="IP Address" Width="100" />
                             <DataGridTextColumn Binding="{Binding Port}" Header="Port" Width="50" />
-                            <DataGridTextColumn Binding="{Binding Client}" Header="Client" Width="100" />
+                            <!--<DataGridTextColumn Binding="{Binding Client}" Header="Client" Width="100" />-->
                             <DataGridTextColumn Binding="{Binding DateTime}" Header="Date&amp;Time" Width="150" />
                             <DataGridTextColumn Binding="{Binding Title}" Header="Title" Width="100" />
                             <DataGridTextColumn Binding="{Binding FileHash}" Header="File Hash" Width="200" />
@@ -107,7 +107,7 @@
                         <Label Grid.Column="0" x:Name="lblTitle" Content="Select Title" HorizontalAlignment="Right" VerticalAlignment="Center"/>
                         <ComboBox Grid.Column="1" x:Name="cbTitle" Margin="1, 3, 1, 5" HorizontalAlignment="Left" Width="200" SelectionChanged="cbISP_Or_cbTitle_SelectionChanged"/>
                     </Grid>
-                    <Button Grid.Row="3" x:Name="btnExport" Content="Export" Margin="0, 10, 5, 5" HorizontalAlignment="Right" Width="100"/>
+                    <Button Grid.Row="3" x:Name="btnExport" Content="Export" Margin="0, 10, 5, 5" HorizontalAlignment="Right" Width="100" Click="btnExport_Click"/>
                 </Grid>
             </TabItem>
         </TabControl>
