--- a/TorrLogger/MainWindow.xaml
+++ b/TorrLogger/MainWindow.xaml
@@ -53,9 +53,11 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="70" />
                                 <ColumnDefinition Width="70" />
+                                <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <Button Grid.Column="0" x:Name="btnAdd" Content="Add" HorizontalAlignment="Stretch" Margin="3, 3, 3, 3" Click="btnAdd_Click" />
                             <Button Grid.Column="1" x:Name="btnDelete" Content="Delete" HorizontalAlignment="Stretch" Margin="3, 3, 3, 3" Click="btnDelete_Click" />
+                            <Button Grid.Column="2" x:Name="btnClear" Content="Clear history" HorizontalAlignment="Right" Margin="3, 3, 3, 3" Padding="10 0 10 0" Click="btnClear_Click" />
                         </Grid>
                     </Grid>
                     <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" BorderThickness="0,1" Background="White" Foreground="Black"/>
